# notes

./: .gitignore  airflow-101-astro-academy.md
cline/: README.md  custom_instructions.md
dagster/: README.md
gcpboleh/: gcpboleh.md
gcpboleh/Analyze Images with the Cloud Vision API/: notes.md
gcpboleh/Analyze Speech and Language with Google APIs/: notes.md
gcpboleh/develop-an-app-with-vertex-ai-gemini-1.0-pro/: notes.md
gcpboleh/develop-an-app-with-vertex-ai-gemini-1.0-pro/gemini-app/: app.py  app_tab1.py  app_tab2.py  app_tab3.py  app_tab4.py  response_utils.py
mcp-servers/: README.md
pg-compare/: README.md
sqlglot-test/: README.md  pyproject.toml
zuplo/cline_docs/: projectBrief.md
zuplo/implementation/: README.md  environment.json  package.json  policies.json  routes.json  routes.oas.json  supabase-setup.sql  tsconfig.json
zuplo/implementation/modules/: events-handler.ts
