[tool.poetry]
name = "sqlglot-test"
version = "0.1.0"
description = ""
authors = ["mbtan <62867709+mbryantan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = {extras = ["rs"], version = "^23.15.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
